# tech_challenge_01

./: .gitignore  README.md  requirements.txt  testes_vitivinicultura.html
.github/workflows/: README.md  update-server.yml  upload-docker-image.yml
docker/: Dockerfile  README.md  docker-compose.yml
server/: docker-compose.yml
server/test_app/: Dockerfile
server/test_app/app/: main.py
tech_challenge/: pyproject.toml
tech_challenge/src/tech_challenge/: db_bases.py  main.py  schemas.py  scraper.py  utils.py
tech_challenge/src/tech_challenge/routes/: comercializacao.py  data_routes.py  exportacao.py  importacao.py  login.py  processamento.py  producao.py  register.py
tech_challenge/src/tech_challenge/schemas/: api_schemas.py  db_schemas.py  sub_tables.py
tech_challenge/src/tech_challenge/services/: auth.py  data_service.py  db.py  scraper.py
tech_challenge/src/tech_challenge/utils/: common.py  db.py  scraper.py
tech_challenge/tests/: test_main.py
webhook/webhook_app/: Dockerfile  docker-compose.yml
webhook/webhook_app/app/: main.py  update_script.sh
