[project]
name = "tech-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Iury da Rocha Miguel",email = "iurymig.sht@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "tech_challenge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
